--- a/_config.yml
+++ b/_config.yml
@@ -23,19 +23,19 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://mrsjunkrunner.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: ebenbruyns # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: JunkStore4deck # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Junk Store Team
+  email: junkstore@sdk.co.nz # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
