--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Pacific/Auckland
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Junk Store # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: An open source extensible Steam Deck plugin for non-Steam stores. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  An open source extensible Steam Deck plugin for non-Steam stores.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -31,6 +31,10 @@ github:
 twitter:
   username: JunkStore4deck # change to your twitter username
 
+patreon:
+  username: Junk-Store # change to your github username
+
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -38,10 +42,10 @@ social:
   email: junkstore@sdk.co.nz # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/JunkStore4deck # change to your twitter homepage
+    - https://github.com/ebenbruyns/junkstore # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
+    - https://www.reddit.com/r/JunkStore/
     # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
@@ -96,7 +100,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://pbs.twimg.com/profile_images/1780351282873503744/u6bmEPuZ_400x400.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
