--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,39 @@
 - type: github
   icon: "fab fa-github"
 
+- type: patreon
+  icon: 'fab fa-patreon'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.patreon.com/junkstore'                  # Fill with your Patreon homepage
+
+- type: ko-fi
+  icon: 'fa-solid fa-mug-saucer'
+  url:  'https://ko-fi.com/junkstore'                  # Fill with your ko-fi homepage
+
+- type: discord
+  icon: 'fab fa-discord'
+  url:  'https://discord.gg/6mRUhR6Teh'                  # Fill with your discord homepage  
+
+
+
+
+# Uncomment and complete the url below to enable more contact options
+#
+# - type: mastodon
+#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
+#   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
+#
+
+#
+- type: reddit
+  icon: 'fab fa-reddit'
+  url:  'https://www.reddit.com/r/JunkStore/'                  # Fill with your reddit homepage
+
 - type: twitter
   icon: "fa-brands fa-x-twitter"
+
+- type: facebook
+  icon: 'fa-brands fa-facebook'
+  url:  'https://www.facebook.com/groups/1386077538759527'     
 
 - type: email
   icon: "fas fa-envelope"
@@ -13,16 +44,3 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
-# Uncomment and complete the url below to enable more contact options
-#
-# - type: mastodon
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
-#
-# - type: stack-overflow
-#   icon: 'fab fa-stack-overflow'
-#   url:  ''                  # Fill with your stackoverflow homepage
