--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Junk Store"
 email: "junkstore@sdk.co.nz"
 description: "Play non-Steam games on your Steam Deck with ease."
 baseurl: "" # root
-url: "https://junkstore.xyz" # your real live URL
+url: "https://www.junkstore.xyz" # your real live URL
 
 # Theme Settings
 #theme: minimal-mistakes-jekyll
