--- a/_config.yml
+++ b/_config.yml
@@ -164,3 +164,5 @@ lunr:
   search_within_pages: true
 
 enable_copy_code_button: true
+# Jekyll Analytics
+google_analytics: "G-E2Y00GCMSG" # Replace with your Google Analytics tracking ID
