--- a/_config.yml
+++ b/_config.yml
@@ -164,5 +164,6 @@ lunr:
   search_within_pages: true
 
 enable_copy_code_button: true
-# Jekyll Analytics
-google_analytics: "G-E2Y00GCMSG" # Replace with your Google Analytics tracking ID
+
+google_analytics:
+  id: "G-E2Y00GCMSG" # replace with your actual Google Analytics Measurement ID
