fixed up FAQs, cookie consent, Privacy, fixed tutorial format

--- a/_config.yml
+++ b/_config.yml
@@ -117,9 +117,9 @@ footer:
       icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/JunkStore4deck"
       target: "_blank"
-    #- label: "GitHub Decky Plugin"
+    - label: "Privacy Policy"
      # icon: "fab fa-fw fa-github"
-    #  url: "https://github.com/ebenbruyns/junkstore"
+      url: "/privacy-policy"
    # - label: "GitHub Closed Source"
       #icon: "fab fa-fw fa-github"
      # url: "https://github.com/your-closed-source-repo"
