lots of changes
formatting for consistency, updated buttons, games tested, on-boarding info, testimonials and cleaned up .scss files

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: "/v2faq"    
   - title: "Troubleshooting"
     url: /troubleshooting/v2
+  - title: "Tested Games"
+    url: /v2/tested-games
   - title: "Decky Plugin"
     url: /plugin/
   #- title: "Sitemap"
