updated games tested and testimonials

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -10,5 +10,5 @@
 - name: "Tiny Tech"
   text: "It's the perfect Swiss Army knife for my Deck!"
 
-# - name: ""
-#   text: ""
+- name: "Dio"
+  text: "Complexity simplified, with Junkstore I can play all my games from other stores natively and seamlessly on my Steam Deck."
