--- a/_data/amazon_games.yml
+++ b/_data/amazon_games.yml
@@ -1,23 +1,23 @@
 - title: "Aces of the Luftwaffe - Squadron Extended Edition"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "Bang Bang Racing"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "The Collage Atlas"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "Dexter Stardust: Adventures in Outer Space"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
@@ -35,25 +35,25 @@
   date_tested: "July '25"
 
 - title: "The Gap"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "Max: The Curse of Brotherhood"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "Nine Witches: Family Disruption"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
 
 - title: "Spirit Mancer"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: "July '25"
@@ -77,7 +77,7 @@
   date_tested: "July '25"
 
 - title: "Star Wars Knights of the Republic"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: ""
@@ -94,24 +94,23 @@
   storefront: Amazon
   date_tested: ""
 
-
 - title: "Projection First Light"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: ""
   
 - title: "Vlad Circus"
-  notes: "Works out of the box with native controller support."
+  notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
   date_tested: ""
 
-- title: ""
-  notes: ""
-  protondb: ""
-  storefront: Amazon
-  date_tested: ""
+# - title: ""
+#   notes: ""
+#   protondb: ""
+#   storefront: Amazon
+#   date_tested: ""
   
 # - title: ""
 #   notes: ""
