updated games tested page
updated games lists, made it a scroll-able table, new games box and tips box at the top

--- a/_data/gog_games.yml
+++ b/_data/gog_games.yml
@@ -10,10 +10,11 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "Nov '24"
 
-- title: "Absolute Drift"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/320140"
-  notes: ""
+# - title: "Absolute Drift"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/320140"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Alan Wake"
   storefront: "GOG"
@@ -32,15 +33,17 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "April '25"
 
-- title: "Alien Breed 2: Assault"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/22650"
-  notes: ""
+# - title: "Alien Breed 2: Assault"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/22650"
+#   notes: ""
+#   date_tested: ""
 
-- title: "Alien Breed 3: Descent"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/22670"
-  notes: ""
+# - title: "Alien Breed 3: Descent"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/22670"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Medal of Honor: Allied Assault War Chest"
   storefront: "GOG"
@@ -78,10 +81,11 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "Oct '24"
 
-- title: "Amnesia: The Dark Descent"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/57300"
-  notes: ""
+# - title: "Amnesia: The Dark Descent"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/57300"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Ancient Enemy"
   storefront: "GOG"
@@ -335,16 +339,17 @@
   notes: "Need to change to keyboard & mouse settings."
   date_tested: "July '24"
 
-- title: "Crysis®"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/17300"
-  notes: ""
+# - title: "Crysis®"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/17300"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Cuphead"
   storefront: "GOG"
   protondb: "https://www.protondb.com/app/268910"
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
-  date_tested: "July '24"
+  date_tested: "June '24"
 
 - title: "Cursed to Golf"
   storefront: "GOG"
@@ -730,10 +735,11 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "Oct '24"
 
-- title: "Icewind Dale: Enhanced Edition"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/321800"
-  notes: ""
+# - title: "Icewind Dale: Enhanced Edition"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/321800"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Immortal Redneck"
   storefront: "GOG"
@@ -969,10 +975,11 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "Nov '24"
 
-- title: "Obduction"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/306760"
-  notes: ""
+# - title: "Obduction"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/306760"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Once Upon a Jester"
   storefront: "GOG"
@@ -1058,10 +1065,11 @@
   notes: "Set the executable to ./Prince of Persia.exe. Need to change controller mapping to keyboard and mouse."
   date_tested: "March '25"
 
-- title: "Prison Architect"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/233450"
-  notes: ""
+# - title: "Prison Architect"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/233450"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Quake II"
   storefront: "GOG"
@@ -1538,15 +1546,17 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   date_tested: "April '25"
 
-- title: "The Witcher: Enhanced Edition"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/20900"
-  notes: ""
+# - title: "The Witcher: Enhanced Edition"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/20900"
+#   notes: ""
+#   date_tested: "July '25"
 
-- title: "The Witcher 2: Assassins of Kings Enhanced Edition"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/20920"
-  notes: ""
+# - title: "The Witcher 2: Assassins of Kings Enhanced Edition"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/20920"
+#   notes: ""
+#   date_tested: "July '25"
 
 - title: "The Witcher 3: Complete Edition"
   storefront: "GOG"
@@ -1590,10 +1600,11 @@
   notes: "Need to change controller mapping to keyboard & mouse."
   date_tested: "March '25"
 
-- title: "Ziggurat"
-  storefront: "GOG"
-  protondb: "https://www.protondb.com/app/308420"
-  notes: ""
+# - title: "Ziggurat"
+#   storefront: "GOG"
+#   protondb: "https://www.protondb.com/app/308420"
+#   notes: ""
+#   date_tested: ""
 
 - title: "Dark Envoy"
   storefront: "GOG"
@@ -1737,6 +1748,18 @@
   protondb: ""
   notes: "You need to chagne the controller layout/mapping." 
   date_tested: "Aug '24"
+
+- title: "Star Wars Jedi Knight: Dark Forces II"
+  storefront: "GOG"
+  protondb: "https://www.protondb.com/app/32380"
+  notes: "You need to change controller mapping to keyboard & mouse and tweak the mapping." 
+  date_tested: "July '25"
+
+# - title: ""
+#   storefront: "GOG"
+#   protondb: ""
+#   notes: "" 
+#   date_tested: ""
 
 # - title: ""
 #   storefront: "GOG"
