committing as created a new branch for stuff

--- a/_data/amazon_games.yml
+++ b/_data/amazon_games.yml
@@ -98,7 +98,7 @@
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
   protondb: ""
   storefront: Amazon
-  date_tested: ""
+  date_tested: "July '25"
   
 - title: "Vlad Circus"
   notes: "<strong>Works out of the box</strong> — no extra setup needed."
