Revert "committing as created a new branch for stuff"
This reverts commit f1149b19f3cdd0f322e47cf1f43b42aab46ead0a.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "About"
     url: /about/
   - title: "FAQ"
-    url: "/2.0-faq/"    
+    url: "/v2faq"    
   - title: "Troubleshooting"
-    url: /2.0-troubleshooting/
+    url: /troubleshooting/v2
   - title: "Tested Games"
-    url: /tested-games/
+    url: /v2/tested-games
   - title: "Decky Plugin"
     url: /plugin/
   #- title: "Sitemap"
