--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -1,23 +1,17 @@
 - title: "Star Wars Jedi Knight: Dark Forces II"
   storefront: "GOG"
 
+- title: "Beholder 3"
+  storefront: "Amazon"
+
+- title: "The Abaondoned Planet"
+  storefront: "Amazon"
+
 # - title: ""
 #   storefront: "Epic"
 
 # - title: ""
-#   storefront: ""
+#   storefront: "GOG"
 
 # - title: ""
-#   storefront: ""
-
-# - title: ""
-#   storefront: ""
-
-# - title: ""
-#   storefront: ""
-
-# - title: ""
-#   storefront: ""
-
-# - title: ""
-#   storefront: ""
+#   storefront: "Amazon"
