updated games tested
change 'new games' format, added this weeks free games

--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -13,6 +13,15 @@
 - title: "Sky Racket"
   storefront: "Epic"
 
+- title: "Marvel's Midnight Suns"
+  storefront: "Epic"
+
+- title: "Amnesia: Rebirth"
+  storefront: "Epic"
+
+- title: "Football Manager 2024"
+  storefront: "Epic"
+
 # - title: ""
 #   storefront: "Epic"
 
