--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -7,6 +7,12 @@
 # - title: ""
 #   storefront: ""
 
+- title: "Figment 2: Creed Valley"
+  storefront: "Epic"
+
+- title: "Sky Racket"
+  storefront: "Epic"
+
 # - title: ""
 #   storefront: ""
 
