navigation to games tested

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Troubleshooting"
     url: /troubleshooting/v2
   - title: "Tested Games"
-    url: /v2/tested-games
+    url: /tested-games
   - title: "Decky Plugin"
     url: /plugin/
   #- title: "Sitemap"
