updated Epic and featured games

--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -22,6 +22,15 @@
 - title: "Football Manager 2024"
   storefront: "Epic"
 
+- title: "Genshin Impact"
+  storefront: "Epic"
+
+- title: "Zenless Zone Zero"
+  storefront: "Epic"
+
+- title: "Crystal of Atlan"
+  storefront: "Epic"
+
 # - title: ""
 #   storefront: "Epic"
 
