--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -1,5 +1,17 @@
-- title: "Star Wars Jedi Knight: Dark Forces II"
-  storefront: "GOG"
+- title: "Civilization VI"
+  storefront: "Epic"
+
+- title: "Endless Space 2"
+  storefront: "Amazon"
+
+- title: "Genshin Impact"
+  storefront: "Epic"
+
+- title: "Zenless Zone Zero"
+  storefront: "Epic"
+
+- title: "Crystal of Atlan"
+  storefront: "Epic"
 
 - title: "Beholder 3"
   storefront: "Amazon"
@@ -20,15 +32,6 @@
   storefront: "Epic"
 
 - title: "Football Manager 2024"
-  storefront: "Epic"
-
-- title: "Genshin Impact"
-  storefront: "Epic"
-
-- title: "Zenless Zone Zero"
-  storefront: "Epic"
-
-- title: "Crystal of Atlan"
   storefront: "Epic"
 
 # - title: ""
