--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Junk Store 2.0 Hub"
     url: "/2.0-hub/"
-  - title: "Learn More"
-    url: /learnmore/
+  # - title: "Learn More"
+  #   url: /learnmore/
   - title: "About"
     url: /about/
   - title: "Decky Plugin Hub"
