updates and changes made by Claude

--- a/_data/featured_games.yml
+++ b/_data/featured_games.yml
@@ -16,7 +16,7 @@
 - title: "Beholder 3"
   storefront: "Amazon"
 
-- title: "The Abaondoned Planet"
+- title: "The Abandoned Planet"
   storefront: "Amazon"
 
 - title: "Figment 2: Creed Valley"
@@ -34,17 +34,3 @@
 - title: "Football Manager 2024"
   storefront: "Epic"
 
-# - title: ""
-#   storefront: "Epic"
-
-# - title: ""
-#   storefront: "GOG"
-
-- title: "Zenless Zone Zero"
-  storefront: "Epic"
-
-- title: "Crystal of Atlan"
-  storefront: "Epic"
-
-# - title: ""
-#   storefront: "Amazon"
