Adds WebM backup directory to .gitignore
Excludes the WebM backup directory from version control.

This prevents accidental inclusion of large backup files,
reducing repository size and improving performance.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ assets/lib
 # Project management and internal documentation
 *.backup
 
+# WebM backup files
+assets/images/backups/
+
 # Build artifacts
 .sass-cache/
 __pycache__/
