Adds new user testimonials
Includes additional testimonials to showcase user
experiences and enhance the product's credibility.

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -12,3 +12,6 @@
 
 - name: "Dio"
   text: "Complexity simplified, with Junkstore I can play all my games from other stores natively and seamlessly on my Steam Deck."
+
+- name: "Phil Osyfee"
+  text: "With as much going on in the background, the experience is as simple an seamless as ever."
