--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -15,3 +15,9 @@
 
 - name: "Phil Osyfee"
   text: "With as much going on in the background, the experience is as simple an seamless as ever."
+
+- name: "Reddit User"
+  text: "It's far easier to use and doesn't require restarting after installing a game; it's a far more 'native' experience."
+
+- name: "Reddit User"
+  text: "Junk store is what I use and hands on the best solution for getting epic games onto the deck."
