--- a/assets/data/games/epic/cassette-beasts.json
+++ b/assets/data/games/epic/cassette-beasts.json
@@ -63,8 +63,8 @@
   "epic_cloud_saves": false,
   "tested": true,
   "owned": true,
-  "is_featured": true,
+  "is_featured": false,
   "blog_category": "",
   "created_at": "2025-12-27T20:09:41.081Z",
-  "updated_at": "2025-12-28T20:04:14.983Z"
+  "updated_at": "2025-12-30T02:34:42.022Z"
 }
