Adds a link to the user portal
Adds a link to the user portal in the main navigation.

Removes the trials extended message from the promo banner.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,8 @@ main:
     url: /about/
   - title: "Buy Now"
     url: /buy_now/
+  - title: "Portal"
+    url: https://portal.junkstore.xyz/
 
 # FAQ sidebar navigation
 faq-nav:
